<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment"
        android:name="com.virasat.nammaguide.ui.home.HomeFragment"
        android:label="@string/nav_discover" />

    <fragment android:id="@+id/mapFragment"
        android:name="com.virasat.nammaguide.ui.map.MapFragment"
        android:label="@string/nav_map" />

    <fragment android:id="@+id/passportFragment"
        android:name="com.virasat.nammaguide.ui.passport.PassportFragment"
        android:label="@string/nav_passport" />

    <fragment android:id="@+id/settingsFragment"
        android:name="com.virasat.nammaguide.ui.settings.SettingsFragment"
        android:label="@string/nav_settings">
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment android:id="@+id/aboutFragment"
        android:name="com.virasat.nammaguide.ui.about.AboutFragment"
        android:label="@string/settings_about" />
</navigation>
